# bright

./: ProjectHome.md  README.TXT
client/: .project  build.xml
client/src/bright/gui/: ApplicationException.java  Bright.java  ConsensusNetwork.java  LearnedNetwork.java  Learner.java  LearnerDialog.java  Network.java  NetworkSet.java  Project.java  Settings.java  SettingsDialog.java  Table.java  design.txt
client/src/bright/obb/: Buttcon.java  Certainty.java  CertiePointer.java  DBScrollPane.java  DBScrollbar.java  IApplet.java  IHisto.java  IPopChoice.java  ImageCanvas.java  NodeDrag.java  TimeBomb.java  VDotNode.java
client/src/bright/obb/infer/: Ansu.java  AnsuMarginalizer.java  Bla.java  JoinTreeClique.java  Marginalizer.java  Message.java
learner/: AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.ac
learner/src/: Makefile.am  Makefile.in  bnlearner.c  bnmcmc.c  bnpredict.c  drand48.c  remove_edge.c
learner/src/common/: CMakeLists.txt  Makefile.am  Makefile.in  bane.c  bane.h  banesearch.c  banesearch.h  data.c  data.h  node.c  node.h
server/bright-prepobb/: startService
trunk/: README.TXT
trunk/client/: .classpath  build.xml
trunk/client/src/bright/gui/: Bright.java  ConsensusNetwork.java  LearnedNetwork.java  Learner.java  LearnerDialog.java  LogFileTailer.java  LogFileTailerListener.java  Network.java  ProgressListener.java  Project.java  Settings.java  SettingsDialog.java
trunk/client/src/bright/obb/: Bezier.java  BezierCanvas.java  DBCanvas.java  DBFrame.java  DotGraph.java  IApplet.java  IChoice.java  ILabel.java  InfererCLI.java  SimpleListener.java  ValGraph.java  ZoomBox.java
trunk/client/src/bright/obb/infer/: Answun.java  BitSetEnumerator.java  Inferer.java  JoinTree.java  MessageQueue.java
trunk/learner/: CMakeLists.txt  COPYING  Makefile.in  README  configure  configure.ac
trunk/learner/src/: CMakeLists.txt  Makefile.in  arcweights.c  bn_contd_learner.c  bnlearner.c  bnmcmc.c  modeleval.c  str_n_dat2sst.c  trim.c
trunk/learner/src/common/: CMakeLists.txt  bane.c  banesearch.c  banesearch.h  nb_selector.c  node.c  node.h  score_hashtable.c  score_hashtable.h
trunk/learner/win32/mingw/: Makefile
trunk/server/bright-prepobb/: service.xml  startService
