noinst_LTLIBRARIES = libbaywaycommon.la

libbaywaycommon_la_SOURCES = bane.c bane_nb.c banesearch.c data.c fdata.c \
                             forest.c format.c nb_selector.c nbmodel.c node.c \
                             parent_matrix.c score_hashtable.c \
                             bane.h bane_nb.h banesearch.h bitset.h data.h \
                             err.h fdata.h forest.h format.h nb_selector.h \
                             nbmodel.h node.h parent_matrix.h \
                             score_hashtable.h typedef_node.h

AM_CFLAGS = -fPIC

srcdir = @srcdir@
VPATH = @srcdir@

libbaywaycommon_la_LIBADD = -lm


