SUBDIRS(common)

INCLUDE_DIRECTORIES(common)

ADD_EXECUTABLE(arcweights arcweights.c)
ADD_EXECUTABLE(bflearner bflearner.c)
ADD_EXECUTABLE(bnlearner bnlearner.c)
ADD_EXECUTABLE(bn_contd_learner bn_contd_learner.c)
ADD_EXECUTABLE(bnmcmc bnmcmc.c)
ADD_EXECUTABLE(bnpredict bnpredict.c)
ADD_EXECUTABLE(modeleval modeleval.c)
ADD_EXECUTABLE(remove_edge remove_edge.c)
ADD_EXECUTABLE(str_n_dat2sst str_n_dat2sst.c)
ADD_EXECUTABLE(trim trim.c)

TARGET_LINK_LIBRARIES(arcweights bayway m)
TARGET_LINK_LIBRARIES(bflearner bayway m)
TARGET_LINK_LIBRARIES(bnlearner bayway m)
TARGET_LINK_LIBRARIES(bn_contd_learner bayway m)
TARGET_LINK_LIBRARIES(bnmcmc bayway m)
TARGET_LINK_LIBRARIES(bnpredict bayway m)
TARGET_LINK_LIBRARIES(modeleval bayway m)
TARGET_LINK_LIBRARIES(remove_edge bayway m)
TARGET_LINK_LIBRARIES(str_n_dat2sst bayway m)
TARGET_LINK_LIBRARIES(trim bayway m)

INSTALL (TARGETS arcweights bflearner bnlearner bn_contd_learner bnmcmc bnpredict modeleval remove_edge str_n_dat2sst trim DESTINATION bin)
